fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@
       flex-direction: column; } }
 
 .brand-span {
-  font-size: 14px;
+  font-size: 18px;
   color: #c18f59; }
 
 .brand-button {
@@ -867,3 +867,41 @@
       .footer-bottom-inner p {
         font-size: 14px;
         margin-bottom: 20px; } }
+
+.info {
+  position: relative;
+  display: flex;
+  align-items: flex-end;
+  background-position: center;
+  background-size: cover; }
+  .info::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #343434;
+    opacity: 1; }
+  .info .site-container {
+    position: relative;
+    z-index: 1; }
+  @media (max-width: 1600px) {
+    .info {
+      padding-top: 40px; } }
+  @media (max-width: 1250px) {
+    .info {
+      padding-top: 30px; } }
+  @media (max-width: 520px) {
+    .info {
+      padding-top: 20px; } }
+  @media (min-width: 1600px) {
+    .info {
+      min-height: 0vh; } }
+        
+.site-navigation-pro {
+  top: 4.6%;
+  width: 100%;
+  padding-left: 180px;
+  font-size: 40px;
+  color: #000; }
